@startuml School

title Canica - School Domain

class Student << Entity >>{
  string id
  string name
}

class StudentGroup << Entity >>{
  string id
  string name

  addStudent(student)
  removeStudent(student)
}

class SchoolTerm << Entity >>{
  string id
  int start
  int finish
}

class Quarter << Entity >>{
  string id
  int number
}

class Evaluation << Aggregate >>{
  string id
  string name

  addGrade(grade)
}

class Area << Entity >>{
  string id
  string name

  addDimension(dimension)
}

class Dimension {
  string id
  string name
}

class Grade {
  string dimensionId
  string studentId
  string value
}


Student o-- StudentGroup
Dimension o-- Area
Quarter o-- SchoolTerm

Evaluation "*" -- "1" SchoolTerm
Evaluation "*" -- "1" Area
Evaluation "*" -- "1" StudentGroup
Evaluation "1" -- "*" Grade

@enduml